learn-kubernetes-minikube/tp-14-isolations-reseau/network-policy-cross-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-cross-namespace
  namespace: development
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: 
    - from: 
      - namespaceSelector:
          matchLabels:
            environment: production
