learn-kubernetes-minikube/tp-14-isolations-reseau/network-policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: production
spec: 
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
